--- a/Site/Cardapio.html
+++ b/Site/Cardapio.html
@@ -48,15 +48,15 @@
 		<div class="row">
 			<div class="col-xs-9 abas-horizontais">
 				<br>
-				<button id="btn-pratos-novos" class="aba disabled btn btn-lg text-center sombra btn-success">Massas</button>
-				<button id="btn-recomendacao" class="aba btn btn-lg text-center sombra btn-primary">Lanches</button>
-				<button id="btn-jantares" class="aba btn btn-lg text-center sombra btn-warning">Jantares</button>
-				<button id="btn-almocos" class="aba btn btn-lg text-center sombra btn-info">Almoços</button>
-				<button id="btn-promocoes" class="aba btn btn-lg text-center sombra btn-danger">Sobremesas</button>
+				<button id="btn-pratos-novos" class="aba disabled btn btn-lg text-center fundo-vermelho texto-branco">Massas</button>
+				<button id="btn-recomendacao" class="aba btn btn-lg text-center fundo-roxo texto-branco">Lanches</button>
+				<button id="btn-jantares" class="aba btn btn-lg text-center fundo-azul texto-branco">Jantares</button>
+				<button id="btn-almocos" class="aba btn btn-lg text-center fundo-amarelo texto-branco">Almoços</button>
+				<button id="btn-promocoes" class="aba btn btn-lg text-center fundo-branco">Sobremesas</button>
 			</div>
 		</div>
         <div id="cardapio">
-            <div id="lista-pratos-novos" class="bolha fundo-verde">
+            <div id="lista-pratos-novos" class="bolha fundo-vermelho">
                 <div class="row">
                     <div class="col-xs-12">
                         <br>
@@ -109,7 +109,7 @@
             </div>
         <!--novos pratos-->
         <!--recomendacoes-->
-                <div id="lista-recomendacoes" class="some bolha fundo-azul">
+                <div id="lista-recomendacoes" class="some bolha fundo-roxo">
                     <div class="row">
                         <br>
                         <div class="col-xs-12">
@@ -142,7 +142,7 @@
                 </div>
         <!--recomendacoes-->
         <!--promoções-->
-                <div id="lista-promocoes" class="some fundo-vermelho bolha">
+                <div id="lista-promocoes" class="some fundo-branco bolha">
                     <div class="row">
                         <br>
                         <div class="col-xs-12">
@@ -190,7 +190,7 @@
             
 		<!--promoções-->
 		<!--jantares-->
-                <div id="lista-jantares" class="some fundo-amarelo bolha">
+                <div id="lista-jantares" class="some fundo-azul bolha">
                     <div class="row">
                         <br>
                         <div class="col-xs-12">
@@ -237,7 +237,7 @@
                 </div>
 				<!--jantares-->
      			<!--almoçoes-->
-                <div id="lista-almocos" class="some fundo-azul-claro bolha">
+                <div id="lista-almocos" class="some fundo-amarelo bolha">
                     <div class="row">
                         <br>
                         <div class="col-xs-12">
@@ -285,18 +285,17 @@
             </div>
     </main>
     <!--Footer-->
-    <footer id="footer-da-pagina">
+    <footer class="fundo-roxo">
         <br>
-        <h3 class="text-center">Onde nos Encontrar</h3>
+        <h3 class="text-center texto-branco">Onde nos Encontrar</h3>
         <div class="row">
             <br>
-            <div class="col-xs-10 col-xs-offset-1">
-                <center><img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive"></center>
-                <br>
+			<center><img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive"></center>
+            <div class="col-xs-10 col-xs-offset-1 col-md-5">
                 <div class="well well-lg well-rodape">
                     <center>
                         <h3 class="text-center titulo-rodape">Estamos nestas redes sociais</h3>
-                        <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
+                        <h4 class="text-center"><i class="fa fa-whatsapp whatsapp" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
                         <br>
                         <a class="btn btn-social btn-group-lg btn-facebook">
                         <span class="fa fa-facebook"></span> Facebook
@@ -316,16 +315,16 @@
                     </center>
                 </div>
             </div>
-            <div class="col-xs-10 col-xs-offset-1">
+            <div class="col-xs-12 col-md-5">
                 <div class="well well-lg well-rodape">
                     <h3 class="text-center titulo-rodape">Nosso Endereço</h3>
-                    <br>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8683.272621687718!2d-38.53786088283797!3d-3.745132103312987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491a5cfc50e5%3A0x35b7fad8eb59ba84!2sIFCE+-+Campus+de+Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1506797304022" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
             <br>
             <br>
         </div>
+		<center><p class="texto-branco">Este site é um projeto pessoal de Régis Melgaço de Andrade, sem fins lucrativos, somente educativos.</p></center>
     </footer>
 </body>
 <script src="js/muda-de-secao-index.js"></script>
