--- a/Site/contatar.html
+++ b/Site/contatar.html
@@ -41,46 +41,45 @@
    </nav>
    <!--Barra fixa no topo-->
    <!--Footer-->
-   <footer id="footer-da-pagina">
-      <br>
-      <h3 class="text-center">Onde nos Encontrar</h3>
-      <div class="row">
-         <br>
-         <div class="col-xs-10 col-xs-offset-1">
-            <center><img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive"></center>
+   <footer class="fundo-roxo">
+        <br>
+        <h3 class="text-center texto-branco">Onde nos Encontrar</h3>
+        <div class="row">
             <br>
-            <div class="well well-lg well-rodape">
-               <center>
-                  <h3 class="text-center titulo-rodape">Estamos nestas redes sociais</h3>
-                  <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
-                  <br>
-                  <a class="btn btn-social btn-group-lg btn-facebook">
-                  <span class="fa fa-facebook"></span> Facebook
-                  </a>
-                  <br>
-                  <br>
-                  <a class="btn btn-social btn-group-lg btn-instagram">
-                  <span class="fa fa-instagram"></span> Instagram
-                  </a>
-                  <br>
-                  <br>
-                  <a class="btn btn-social btn-group-lg btn-pinterest">
-                  <span class="fa fa-pinterest"></span> Pinterest
-                  </a>
-                  <br>
-                  <br>
-               </center>
+			<center><img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive"></center>
+            <div class="col-xs-10 col-xs-offset-1 col-md-5">
+                <div class="well well-lg well-rodape">
+                    <center>
+                        <h3 class="text-center titulo-rodape">Estamos nestas redes sociais</h3>
+                        <h4 class="text-center"><i class="fa fa-whatsapp whatsapp" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
+                        <br>
+                        <a class="btn btn-social btn-group-lg btn-facebook">
+                        <span class="fa fa-facebook"></span> Facebook
+                        </a>
+                        <br>
+                        <br>
+                        <a class="btn btn-social btn-group-lg btn-instagram">
+                        <span class="fa fa-instagram"></span> Instagram
+                        </a>
+                        <br>
+                        <br>
+                        <a class="btn btn-social btn-group-lg btn-pinterest">
+                        <span class="fa fa-pinterest"></span> Pinterest
+                        </a>
+                        <br>
+                        <br>
+                    </center>
+                </div>
             </div>
-         </div>
-         <div class="col-xs-10 col-xs-offset-1">
-            <div class="well well-lg well-rodape">
-               <h3 class="text-center titulo-rodape">Nosso Endereço</h3>
-               <br>
-               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8683.272621687718!2d-38.53786088283797!3d-3.745132103312987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491a5cfc50e5%3A0x35b7fad8eb59ba84!2sIFCE+-+Campus+de+Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1506797304022" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <div class="col-xs-12 col-md-5">
+                <div class="well well-lg well-rodape">
+                    <h3 class="text-center titulo-rodape">Nosso Endereço</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8683.272621687718!2d-38.53786088283797!3d-3.745132103312987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491a5cfc50e5%3A0x35b7fad8eb59ba84!2sIFCE+-+Campus+de+Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1506797304022" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
             </div>
-         </div>
-         <br>
-         <br>
-      </div>
-   </footer>
+            <br>
+            <br>
+        </div>
+		<center><p class="texto-branco">Este site é um projeto pessoal de Régis Melgaço de Andrade, sem fins lucrativos, somente educativos.</p></center>
+    </footer>
 </body>
