--- a/Site/index.html
+++ b/Site/index.html
@@ -51,18 +51,18 @@
         <div class="parallax-principal">
             <!--seções-->
             <div class="row">
-                <div class="col-xs-9 col-xs-offset-2">
+                <div class="col-xs-9 col-xs-offset-2 ">
                     <br>
-                    <button id="btn-recomendacao" class="aba btn btn-lg text-center sombra btn-primary">Recomendações</button>
-                    <button id="btn-pratos-novos" class="aba disabled btn btn-lg text-center sombra btn-success">Pratos Novos</button>
-                    <button id="btn-promocoes" class="aba btn btn-lg text-center sombra btn-danger">Promoções</button>
+                    <button id="btn-recomendacao" class="aba btn btn-lg text-center fundo-vermelho texto-branco">Recomendações</button>
+                    <button id="btn-pratos-novos" class="aba disabled btn btn-lg text-center fundo-azul texto-branco">Pratos Novos</button>
+                    <button id="btn-promocoes" class="aba btn btn-lg text-center fundo-amarelo texto-branco">Promoções</button>
                 </div>
             </div>
             <!--seções-->
             <!--novos pratos-->
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1">
-                    <div id="lista-pratos-novos" class="bolha fundo-verde">
+                    <div id="lista-pratos-novos" class="bolha fundo-azul">
                         <div class="row">
                             <div class="col-xs-12">
                                 <br>
@@ -119,7 +119,7 @@
             <!--recomendacoes-->
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1">
-            <div id="lista-recomendacoes" class="some bolha fundo-azul">
+            <div id="lista-recomendacoes" class="some bolha fundo-vermelho">
                 <div class="row">
 					<br>
                     <div class="col-xs-12">
@@ -156,7 +156,7 @@
             <!--promoções-->
 			<div class="row">
                 <div class="col-xs-10 col-xs-offset-1">
-            <div id="lista-promocoes" class="some fundo-vermelho bolha">
+            <div id="lista-promocoes" class="some fundo-amarelo bolha">
                 <div class="row">
 					<br>
                     <div class="col-xs-12">
@@ -207,18 +207,16 @@
         </div>
         <!--Footer-->
     </main>
-    <footer id="footer-da-pagina">
+    <footer class="fundo-roxo">
         <br>
-        <h3 class="text-center">Onde nos Encontrar</h3>
         <div class="row">
             <br>
-            <div class="col-xs-10 col-xs-offset-1">
-                <center><img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive"></center>
-                <br>
+			<center><img id="logo-rodape" alt="logo" src="imagens/chef_hat1600.png" class="img-responsive"></center>
+            <div class="col-xs-10 col-xs-offset-1 col-md-5">
                 <div class="well well-lg well-rodape">
                     <center>
                         <h3 class="text-center titulo-rodape">Estamos nestas redes sociais</h3>
-                        <h4 class="text-center"><i class="fa fa-whatsapp verde" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
+                        <h4 class="text-center"><i class="fa fa-whatsapp whatsapp" aria-hidden="true"></i> WhatsApp (85)99999-9999</h4>
                         <br>
                         <a class="btn btn-social btn-group-lg btn-facebook">
                         <span class="fa fa-facebook"></span> Facebook
@@ -238,17 +236,17 @@
                     </center>
                 </div>
             </div>
-            <div class="col-xs-10 col-xs-offset-1">
+            <div class="col-xs-12 col-md-5">
                 <div class="well well-lg well-rodape">
                     <h3 class="text-center titulo-rodape">Nosso Endereço</h3>
-                    <br>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8683.272621687718!2d-38.53786088283797!3d-3.745132103312987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491a5cfc50e5%3A0x35b7fad8eb59ba84!2sIFCE+-+Campus+de+Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1506797304022" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8683.272621687718!2d-38.53786088283797!3d-3.745132103312987!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7491a5cfc50e5%3A0x35b7fad8eb59ba84!2sIFCE+-+Campus+de+Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1506797304022" width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
             <br>
             <br>
         </div>
-		<center><p>Este site é um projeto pessoal de Régis Melgaço de Andrade, sem fins lucrativos, somente espositivos.</p></center>
+		<center><p class="texto-branco">Este site é um projeto pessoal de Régis Melgaço de Andrade, sem fins lucrativos, somente educativos.</p></center>
+		<br>
     </footer>
 </body>
 <script src="js/muda-de-secao-index.js"></script>
